[tool.poetry]
name = "at-config"
version = "0.1.dev0"
description = ""
authors = ["grigadnal625 <grigandal625@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
schema = "^0.7.7"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
